--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
+      - echo "Logging in to ECR at $ECR_REPO_URL"
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO_URL
   build:
     commands:
